@@ -8,6 +8,7 @@
 -update for python 2/3 compatibility.
 -add touch event support when using Pyjsdl.
 -update interface move method to utilize timed rate.
+-update control response for no repeat option.
 
 0.87    2015-04-12
 -update Text.tprint to use rendered character cache.
